Atualizar o resumo.html

--- a/resumo.html
+++ b/resumo.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Resumo – RF Driver</title>
+<title>Resumo da Corrida – RF Driver</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="./theme/theme.css">
@@ -10,16 +10,9 @@
 <link rel="stylesheet" href="./theme/components.css">
 
 <style>
-:root{
-  --gold:#D4AF37;
-  --gold-soft:#E6C97A;
-  --bg:#F6F6F6;
-  --text:#333;
-}
-
 body{
   background:linear-gradient(180deg,#ffffff,#f2f2f2);
-  color:var(--text);
+  color:#111;
 }
 
 .page{
@@ -37,7 +30,6 @@ body{
   gap:16px;
 }
 
-/* HEADER */
 .header{
   text-align:center;
   padding:20px;
@@ -47,55 +39,29 @@ body{
 }
 
 .header h1{
-  font-size:1.2rem;
+  font-size:1.15rem;
   font-weight:800;
-  color:var(--gold);
+  color:#D4AF37;
 }
 
-.header span{
-  font-size:.75rem;
-  color:#666;
-}
-
-/* ROTA */
-.route{
-  background:#fff;
-  border-radius:20px;
-  padding:18px;
-  text-align:center;
-  box-shadow:0 6px 18px rgba(0,0,0,.06);
-}
-
-.arrow{
-  margin:6px 0;
-  color:var(--gold);
-  font-size:1.4rem;
-}
-
-/* BLOCO */
-.block{
+.route,
+.block,
+.totalBox{
   background:#fff;
   border-radius:18px;
   padding:16px;
-  box-shadow:0 6px 18px rgba(0,0,0,.06);
+  box-shadow:0 6px 18px rgba(0,0,0,.08);
 }
 
-label{
-  font-size:.8rem;
-  font-weight:700;
-  display:block;
-  margin-bottom:6px;
-}
+.route{text-align:center}
 
-select,input[type="number"]{
+select,input{
   width:100%;
   padding:12px;
   border-radius:14px;
   border:1px solid #ccc;
-  font-size:.95rem;
 }
 
-/* EXTRAS */
 .extra{
   display:flex;
   justify-content:space-between;
@@ -107,51 +73,36 @@ select,input[type="number"]{
 }
 
 .extra.active{
-  background:rgba(212,175,55,.12);
-  border-color:var(--gold);
-}
-
-/* DETALHAMENTO */
-.details{
-  font-size:.85rem;
+  border-color:#D4AF37;
+  background:rgba(212,175,55,.08);
 }
 
 .details div{
   display:flex;
   justify-content:space-between;
+  font-size:.85rem;
   margin-bottom:6px;
 }
 
-/* TOTAL */
 .totalBox{
   text-align:center;
-  padding:22px;
-  border-radius:22px;
-  background:#fff;
-  box-shadow:0 10px 26px rgba(0,0,0,.1);
 }
 
 .total{
-  font-size:2.3rem;
+  font-size:2.2rem;
   font-weight:800;
-  color:var(--gold);
+  color:#D4AF37;
 }
 
-/* BOTÕES */
-.btn-primary{
+.btn{
   padding:16px;
   border-radius:18px;
   border:none;
-  background:linear-gradient(180deg,var(--gold-soft),var(--gold));
   font-weight:800;
-  color:#000;
 }
 
-.btn-secondary{
-  padding:14px;
-  border-radius:16px;
-  border:1px solid #ccc;
-  background:#fff;
+.btn-primary{
+  background:linear-gradient(180deg,#E6C97A,#D4AF37);
 }
 </style>
 </head>
@@ -161,73 +112,61 @@ select,input[type="number"]{
 <div class="page">
 <div class="container">
 
-  <!-- HEADER -->
   <div class="header">
-    <h1>RF Driver – Resumo da viagem</h1>
-    <span>Valor detalhado</span>
+    <h1>RF Driver – Resumo da Viagem</h1>
   </div>
 
-  <!-- ROTA -->
   <div class="route">
-    <strong>📌 Origem</strong><br>
-    <span id="origemTxt"></span>
-
-    <div class="arrow">⬇</div>
-
-    <strong>🏁 Destino</strong><br>
-    <span id="destinoTxt"></span>
+    <strong>📌 Origem</strong><br><span id="origemTxt"></span>
+    <div style="margin:6px">⬇</div>
+    <strong>🏁 Destino</strong><br><span id="destinoTxt"></span>
   </div>
 
-  <!-- TIPO -->
   <div class="block">
-    <label>🚖 Tipo de viagem</label>
+    <label><strong>🚖 Tipo de viagem</strong></label>
     <select id="tipoViagem">
       <option value="ida">🚕 Ida</option>
-      <option value="bate_volta">♻️ Bate e volta</option>
+      <option value="bate_volta">♻️ Bate e volta (+80%)</option>
       <option value="ida_volta">🚕♻️ Ida e volta</option>
-      <option value="ida_volta_espera">🚕♻️ Ida e volta com espera</option>
+      <option value="ida_volta_espera">🚕♻️ Ida e volta com espera (+10%)</option>
     </select>
   </div>
 
-  <!-- TAXAS -->
   <div class="block">
     <div class="extra"><span>🛣️ Desvio simples</span><input type="checkbox" id="desvioSimples"></div>
     <div class="extra"><span>🏖️ Volta da praia</span><input type="checkbox" id="voltaPraia"></div>
     <div class="extra"><span>🧺 Taxa de feira</span><input type="checkbox" id="taxaFeira"></div>
   </div>
 
-  <!-- ANIMAL -->
   <div class="block">
-    <label>🐶 Transporte de animal</label>
+    <label><strong>🐶 Transporte de animal</strong></label>
     <select id="animal">
       <option value="0">Não</option>
-      <option value="5">Pequeno – R$ 5</option>
-      <option value="7">Médio – R$ 7</option>
-      <option value="10">Grande – R$ 10</option>
-      <option value="20">Viagem longa – R$ 20</option>
+      <option value="5">Pequeno</option>
+      <option value="7">Médio</option>
+      <option value="10">Grande</option>
+      <option value="20">Viagem longa</option>
     </select>
   </div>
 
-  <!-- ESPERA -->
   <div class="block">
-    <label>⏱️ Tempo de espera (min)</label>
-    <input type="number" id="minutosEspera" placeholder="Ex: 10">
+    <label><strong>⏱️ Tempo de espera (min)</strong></label>
+    <input type="number" id="minutosEspera">
   </div>
 
-  <!-- DETALHAMENTO -->
   <div class="block">
     <strong>Detalhamento</strong>
     <div class="details" id="detalhamento"></div>
   </div>
 
-  <!-- TOTAL -->
   <div class="totalBox">
+    <strong>Total</strong>
     <div class="total" id="total">R$ 0,00</div>
   </div>
 
-  <!-- BOTÕES -->
-  <button class="btn-primary" id="btnWhats">📲 Enviar no WhatsApp</button>
-  <button class="btn-secondary" onclick="App.go('destino.html')">⬅ Voltar</button>
+  <button class="btn btn-primary" id="btnWhats" onclick="enviarWhats()">
+    📲 Enviar recibo no WhatsApp
+  </button>
 
 </div>
 </div>
@@ -237,35 +176,24 @@ select,input[type="number"]{
 <script src="core/dinamico.js"></script>
 
 <script>
-const perfil = App.get("perfil") || "passageiro";
+const usuario = App.get("usuario") || {};
+const tipoUsuario = usuario.tipo || "passageiro";
 
 const origem = App.get("origem");
 const destino = App.get("destino");
 const valorBase = Number(App.get("valorBase") || 0);
 
-document.getElementById("origemTxt").innerText = origem;
-document.getElementById("destinoTxt").innerText = destino;
+origemTxt.innerText = origem;
+destinoTxt.innerText = destino;
 
-const tipoViagem = document.getElementById("tipoViagem");
-const desvioSimples = document.getElementById("desvioSimples");
-const voltaPraia = document.getElementById("voltaPraia");
-const taxaFeira = document.getElementById("taxaFeira");
-const animalSel = document.getElementById("animal");
-const minutosEspera = document.getElementById("minutosEspera");
-const detalheDiv = document.getElementById("detalhamento");
-const totalDiv = document.getElementById("total");
-const btnWhats = document.getElementById("btnWhats");
-
-if(perfil !== "motorista"){
+if(tipoUsuario !== "motorista"){
   btnWhats.style.display = "none";
 }
-
-let detalhesWhats = [];
 
 function calcular(){
   let total = valorBase;
   let detalhes = [];
-  detalhesWhats = [];
+  window.detalhesWhats = [];
 
   detalhes.push(["🚖 Viagem base", valorBase]);
   detalhesWhats.push(`🚖 *Viagem base*: R$ ${valorBase.toFixed(2)}`);
@@ -297,10 +225,8 @@ function calcular(){
     const idaVolta = valorBase * 2;
     const acres = idaVolta * 0.10;
     total += (idaVolta - valorBase) + acres;
-
     detalhes.push(["🚕 Ida e volta", idaVolta - valorBase]);
-    detalhes.push(["⏳ Acréscimo de espera (10%)", acres]);
-
+    detalhes.push(["⏳ Acréscimo de espera", acres]);
     detalhesWhats.push(`🚕 *Ida e volta*: +R$ ${(idaVolta - valorBase).toFixed(2)}`);
     detalhesWhats.push(`⏳ *Espera (10%)*: +R$ ${acres.toFixed(2)}`);
   }
@@ -323,8 +249,8 @@ function calcular(){
     detalhesWhats.push("🧺 *Taxa de feira*: +R$ 5,00");
   }
 
-  const animal = Number(animalSel.value || 0);
-  if(animal > 0){
+  const animal = Number(animal.value || 0);
+  if(animal){
     total += animal;
     detalhes.push(["🐶 Transporte animal", animal]);
     detalhesWhats.push(`🐶 *Transporte animal*: +R$ ${animal.toFixed(2)}`);
@@ -334,33 +260,34 @@ function calcular(){
   if(min >= Taxas.espera.blocoMinutos){
     const acres = Math.floor(min / Taxas.espera.blocoMinutos) * Taxas.espera.valorPorBloco;
     total += acres;
-    detalhes.push([`⏱️ Tempo de espera (${min} min)`, acres]);
+    detalhes.push([`⏱️ Espera (${min} min)`, acres]);
     detalhesWhats.push(`⏱️ *Tempo de espera*: +R$ ${acres.toFixed(2)}`);
   }
 
-  detalheDiv.innerHTML = detalhes.map(d=>`
-    <div>
-      <span><strong>${d[0]}</strong></span>
-      <strong>R$ ${d[1].toFixed(2)}</strong>
-    </div>
-  `).join("");
+  detalhamento.innerHTML = detalhes.map(d =>
+    `<div><span><strong>${d[0]}</strong></span><strong>R$ ${d[1].toFixed(2)}</strong></div>`
+  ).join("");
 
   totalDiv.innerText = `R$ ${total.toFixed(2)}`;
   App.set("total", total);
 }
 
 document.querySelectorAll("select,input").forEach(el=>{
-  el.addEventListener("change",()=>{
-    el.closest(".extra")?.classList.toggle("active", el.checked);
-    calcular();
-  });
+  el.addEventListener("change", calcular);
 });
 
 calcular();
 
-btnWhats.onclick = () => {
-  const msg =
-`🚖 *RF Driver – Recibo de viagem*
+function enviarWhats(){
+  const assinatura = `
+—
+👤 *Motorista*: ${usuario.nome}
+🚗 *Veículo*: ${usuario.modelo}
+🔖 *Placa*: ${usuario.placa}
+`;
+
+  const msg = `
+🚖 *RF Driver – Recibo de viagem*
 
 📌 *Origem*: ${origem}
 🏁 *Destino*: ${destino}
@@ -368,10 +295,12 @@ btnWhats.onclick = () => {
 *Detalhamento*
 ${detalhesWhats.join("\n")}
 
-💰 *Total*: R$ ${App.get("total").toFixed(2)}`;
+💰 *Total*: R$ ${App.get("total").toFixed(2)}
+${assinatura}
+`;
 
   window.open("https://wa.me/?text="+encodeURIComponent(msg),"_blank");
-};
+}
 </script>
 
 </body>
