--- a/index-passageiro.html
+++ b/index-passageiro.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Passageiro 5 Estrelas – Simulação</title>
+<title>Passageiro – RF Driver</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="./theme/theme.css">
@@ -10,149 +10,80 @@
 <link rel="stylesheet" href="./theme/components.css">
 
 <style>
-/* ================== PALETA PASSAGEIRO ================== */
-:root{
-  --wine:#4A1A22;
-  --wine-dark:#2B0F14;
-  --gold:#C9A24D;
-  --bg:#F7F7F7;
-  --text:#333;
-}
-
-/* ================== BASE ================== */
 body{
-  background:
-    radial-gradient(circle at top,#ffffff 0%,#f3f3f3 65%);
-  color:var(--text);
-}
-
-/* ================== LAYOUT ================== */
-.page{
   min-height:100vh;
+  background:linear-gradient(180deg,#ffffff,#f2f2f2);
   display:flex;
-  align-items:center;
   justify-content:center;
-  padding:22px;
+  align-items:center;
 }
 
 .box{
   width:100%;
   max-width:420px;
+  padding:24px;
   display:flex;
   flex-direction:column;
-  gap:22px;
+  gap:18px;
 }
 
-/* ================== HERO ================== */
-.hero{
-  text-align:center;
-  padding:36px 26px;
-  border-radius:26px;
-  background:
-    linear-gradient(
-      135deg,
-      var(--wine-dark),
-      var(--wine)
-    );
-  color:#fff;
-  box-shadow:0 14px 34px rgba(0,0,0,.25);
-}
-
-.hero h1{
-  font-size:1.7rem;
-  letter-spacing:2px;
-  font-weight:800;
-}
-
-.hero span{
-  display:block;
-  margin-top:8px;
-  font-size:.9rem;
-  opacity:.9;
-}
-
-/* ================== INFO ================== */
-.info{
+.card{
   background:#fff;
-  border-radius:20px;
-  padding:18px;
-  box-shadow:0 8px 22px rgba(0,0,0,.08);
+  border-radius:22px;
+  padding:26px;
+  box-shadow:0 10px 28px rgba(0,0,0,.08);
   text-align:center;
 }
 
-.info p{
-  font-size:.9rem;
-  color:#555;
-  line-height:1.5;
-}
-
-/* ================== BOTÃO PRINCIPAL ================== */
-.primary{
-  padding:20px;
-  border-radius:20px;
-  border:none;
-  background:
-    linear-gradient(
-      180deg,
-      #E6C97A,
-      var(--gold)
-    );
-  font-size:1.1rem;
+h1{
+  font-size:1.6rem;
   font-weight:800;
-  color:#000;
-  box-shadow:0 12px 24px rgba(201,162,77,.45);
-  transition:.25s;
+  color:#D4AF37;
 }
 
-.primary:active{
-  transform:scale(.97);
+p{
+  font-size:.9rem;
+  color:#666;
+  margin-top:6px;
 }
 
-/* ================== FOOTER ================== */
-.footer{
-  text-align:center;
-  font-size:.75rem;
-  color:#777;
+.btn{
+  padding:18px;
+  border-radius:18px;
+  border:none;
+  font-weight:800;
+  background:linear-gradient(180deg,#E6C97A,#D4AF37);
 }
 </style>
 </head>
 
 <body>
 
-<div class="page">
-  <div class="box">
+<div class="box">
 
-    <!-- HERO -->
-    <div class="hero">
-      <h1>PASSAGEIRO 5 ESTRELAS</h1>
-      <span>Simule o valor da sua viagem</span>
-    </div>
-
-    <!-- INFO -->
-    <div class="info">
-      <p>
-        Aqui você pode <strong>consultar o valor estimado</strong> da sua corrida
-        com total transparência.<br><br>
-        Sem compromisso, sem envio automático.
-      </p>
-    </div>
-
-    <!-- AÇÃO -->
-    <button class="primary" onclick="iniciarSimulacao()">
-      ▶ Calcular valor da viagem
-    </button>
-
-    <!-- FOOTER -->
-    <div class="footer">
-      Conforto • Segurança • Transparência
-    </div>
-
+  <div class="card">
+    <h1>Passageiro RF Driver</h1>
+    <p>Consulte o valor estimado da sua viagem</p>
   </div>
+
+  <button class="btn" onclick="iniciar()">
+    ▶ Calcular corrida
+  </button>
+
+  <button class="btn btn-outline" onclick="App.go('regras-passageiro.html')">
+    📋 Regras para passageiros
+  </button>
+
 </div>
 
 <script src="core/global.js"></script>
 <script>
-function iniciarSimulacao(){
+const usuario = App.get("usuario");
+if(!usuario || usuario.tipo !== "passageiro"){
+  App.go("login.html");
+}
+
+function iniciar(){
   App.reset();
   App.go("origem.html");
 }
