--- a/cadastro.html
+++ b/cadastro.html
@@ -11,121 +11,168 @@
 
 <style>
 body{
+  background:linear-gradient(180deg,#ffffff,#f3f3f3);
+  color:#333;
+}
+
+.page{
   min-height:100vh;
-  background:linear-gradient(180deg,#ffffff,#f2f2f2);
   display:flex;
   justify-content:center;
   align-items:center;
+  padding:20px;
 }
 
 .box{
   width:100%;
   max-width:420px;
-  padding:26px;
+  background:#fff;
+  border-radius:22px;
+  padding:22px;
+  box-shadow:0 10px 30px rgba(0,0,0,.1);
   display:flex;
   flex-direction:column;
-  gap:16px;
+  gap:14px;
 }
 
-.card{
-  background:#fff;
-  border-radius:20px;
-  padding:20px;
-  box-shadow:0 10px 28px rgba(0,0,0,.08);
+h1{
+  text-align:center;
+  color:#d4af37;
+  font-weight:800;
+  margin-bottom:4px;
+}
+
+.sub{
+  text-align:center;
+  font-size:.85rem;
+  color:#777;
+}
+
+label{
+  font-size:.8rem;
+  font-weight:700;
 }
 
 select,input{
   width:100%;
-  padding:14px;
+  padding:12px;
   border-radius:14px;
   border:1px solid #ccc;
-  margin-bottom:10px;
+  font-size:.95rem;
+}
+
+.group{
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+}
+
+.hidden{
+  display:none;
 }
 
 .btn{
   padding:16px;
   border-radius:18px;
   border:none;
+  background:linear-gradient(180deg,#e6c97a,#d4af37);
+  font-size:1rem;
   font-weight:800;
-  background:linear-gradient(180deg,#E6C97A,#D4AF37);
+  color:#000;
 }
 </style>
 </head>
 
 <body>
 
-<div class="box">
+<div class="page">
+  <div class="box">
 
-  <div class="card">
-    <select id="tipo" onchange="trocarTipo()">
-      <option value="">Sou...</option>
-      <option value="motorista">🚗 Motorista</option>
-      <option value="passageiro">👤 Passageiro</option>
-    </select>
+    <h1>Cadastro</h1>
+    <div class="sub">Cadastro simples e rápido</div>
 
-    <div id="formMotorista" style="display:none">
-      <input id="nome" placeholder="Nome completo">
-      <input id="placa" placeholder="Placa do veículo">
-      <input id="modelo" placeholder="Modelo do veículo">
-      <small>🔑 Seu login será seu nome</small>
+    <!-- TIPO -->
+    <div class="group">
+      <label>Tipo de usuário</label>
+      <select id="tipo" onchange="alternarTipo()">
+        <option value="">Selecione</option>
+        <option value="motorista">🚗 Motorista</option>
+        <option value="passageiro">🧍 Passageiro</option>
+      </select>
     </div>
 
-    <div id="formPassageiro" style="display:none">
-      <input id="nomePass" placeholder="Nome">
-      <input id="celular" placeholder="Celular (ex: 81999999999)">
-      <small>🔑 Seu login será seu celular</small>
+    <!-- CAMPOS COMUNS -->
+    <div class="group">
+      <label>Nome</label>
+      <input type="text" id="nome" placeholder="Ex: Rafael Rufino">
     </div>
+
+    <div class="group">
+      <label>Telefone</label>
+      <input type="tel" id="telefone" placeholder="Ex: 81999999999">
+    </div>
+
+    <!-- MOTORISTA -->
+    <div id="motoristaCampos" class="hidden">
+
+      <div class="group">
+        <label>Placa do carro</label>
+        <input type="text" id="placa" placeholder="Ex: PYR-8416">
+      </div>
+
+      <div class="group">
+        <label>Modelo do carro</label>
+        <input type="text" id="modelo" placeholder="Ex: Nissan Versa">
+      </div>
+
+    </div>
+
+    <button class="btn" onclick="salvarCadastro()">Salvar cadastro</button>
+
   </div>
-
-  <button class="btn" onclick="cadastraraptor()">
-    💾 Salvar cadastro
-  </button>
-
 </div>
 
 <script src="core/global.js"></script>
+
 <script>
-function trocarTipo(){
+function alternarTipo(){
   const tipo = document.getElementById("tipo").value;
-  document.getElementById("formMotorista").style.display =
+  document.getElementById("motoristaCampos").style.display =
     tipo === "motorista" ? "block" : "none";
-  document.getElementById("formPassageiro").style.display =
-    tipo === "passageiro" ? "block" : "none";
 }
 
-function salvar(){
+function salvarCadastro(){
   const tipo = document.getElementById("tipo").value;
-  if(!tipo){
-    alert("Selecione o tipo");
+  const nome = document.getElementById("nome").value.trim();
+  const telefone = document.getElementById("telefone").value.trim();
+  const placa = document.getElementById("placa")?.value.trim();
+  const modelo = document.getElementById("modelo")?.value.trim();
+
+  if(!tipo || !nome || !telefone){
+    alert("Preencha os dados obrigatórios.");
     return;
   }
 
-  let usuario = { tipo };
-
-  if(tipo === "motorista"){
-    usuario.nome = nome.value.trim();
-    usuario.placa = placa.value.trim();
-    usuario.modelo = modelo.value.trim();
-    usuario.login = usuario.nome;
-
-    if(!usuario.nome || !usuario.placa || !usuario.modelo){
-      alert("Preencha todos os campos");
-      return;
-    }
-  }else{
-    usuario.nome = nomePass.value.trim();
-    usuario.celular = celular.value.trim();
-    usuario.login = usuario.celular;
-
-    if(!usuario.nome || !usuario.celular){
-      alert("Preencha todos os campos");
-      return;
-    }
+  if(tipo === "motorista" && (!placa || !modelo)){
+    alert("Preencha os dados do veículo.");
+    return;
   }
 
-  App.set("usuario", usuario);
-  alert("Cadastro realizado com sucesso");
-  App.go("login.html");
+  const usuario = {
+    tipo,
+    nome,
+    telefone,
+    placa: tipo === "motorista" ? placa : null,
+    modelo: tipo === "motorista" ? modelo : null
+  };
+
+  localStorage.setItem("rf_usuario", JSON.stringify(usuario));
+
+  if(tipo === "motorista"){
+    App.go("index.html");
+  }else{
+    App.go("index-passageiro.html");
+  }
 }
 </script>
 
