--- a/cadastro.html
+++ b/cadastro.html
@@ -5,173 +5,69 @@
 <title>Cadastro – RF Driver</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="./theme/theme.css">
-<link rel="stylesheet" href="./theme/layout.css">
-<link rel="stylesheet" href="./theme/components.css">
-
-<style>
-body{
-  background:linear-gradient(180deg,#ffffff,#f3f3f3);
-  color:#333;
-}
-
-.page{
-  min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  padding:20px;
-}
-
-.box{
-  width:100%;
-  max-width:420px;
-  background:#fff;
-  border-radius:22px;
-  padding:22px;
-  box-shadow:0 10px 30px rgba(0,0,0,.1);
-  display:flex;
-  flex-direction:column;
-  gap:14px;
-}
-
-h1{
-  text-align:center;
-  color:#d4af37;
-  font-weight:800;
-  margin-bottom:4px;
-}
-
-.sub{
-  text-align:center;
-  font-size:.85rem;
-  color:#777;
-}
-
-label{
-  font-size:.8rem;
-  font-weight:700;
-}
-
-select,input{
-  width:100%;
-  padding:12px;
-  border-radius:14px;
-  border:1px solid #ccc;
-  font-size:.95rem;
-}
-
-.group{
-  display:flex;
-  flex-direction:column;
-  gap:10px;
-}
-
-.hidden{
-  display:none;
-}
-
-.btn{
-  padding:16px;
-  border-radius:18px;
-  border:none;
-  background:linear-gradient(180deg,#e6c97a,#d4af37);
-  font-size:1rem;
-  font-weight:800;
-  color:#000;
-}
-</style>
+<link rel="stylesheet" href="theme/theme.css">
+<link rel="stylesheet" href="theme/layout.css">
+<link rel="stylesheet" href="theme/components.css">
 </head>
 
 <body>
 
 <div class="page">
-  <div class="box">
+<div class="container">
 
-    <h1>Cadastro</h1>
-    <div class="sub">Cadastro simples e rápido</div>
+<h2>Cadastro</h2>
 
-    <!-- TIPO -->
-    <div class="group">
-      <label>Tipo de usuário</label>
-      <select id="tipo" onchange="alternarTipo()">
-        <option value="">Selecione</option>
-        <option value="motorista">🚗 Motorista</option>
-        <option value="passageiro">🧍 Passageiro</option>
-      </select>
-    </div>
+<label>Tipo de usuário</label>
+<select id="tipo">
+  <option value="motorista">Motorista</option>
+  <option value="passageiro">Passageiro</option>
+</select>
 
-    <!-- CAMPOS COMUNS -->
-    <div class="group">
-      <label>Nome</label>
-      <input type="text" id="nome" placeholder="Ex: Rafael Rufino">
-    </div>
+<label>Nome</label>
+<input id="nome">
 
-    <div class="group">
-      <label>Telefone</label>
-      <input type="tel" id="telefone" placeholder="Ex: 81999999999">
-    </div>
+<label>Telefone</label>
+<input id="telefone">
 
-    <!-- MOTORISTA -->
-    <div id="motoristaCampos" class="hidden">
+<div id="motoristaCampos">
+  <label>Placa do carro</label>
+  <input id="placa">
 
-      <div class="group">
-        <label>Placa do carro</label>
-        <input type="text" id="placa" placeholder="Ex: PYR-8416">
-      </div>
-
-      <div class="group">
-        <label>Modelo do carro</label>
-        <input type="text" id="modelo" placeholder="Ex: Nissan Versa">
-      </div>
-
-    </div>
-
-    <button class="btn" onclick="salvarCadastro()">Salvar cadastro</button>
-
-  </div>
+  <label>Modelo do carro</label>
+  <input id="modelo">
 </div>
 
-<script src="core/global.js"></script>
+<button onclick="cadastrar()">Salvar cadastro</button>
+
+</div>
+</div>
+
+<script src="core/supabase.js"></script>
 
 <script>
-function alternarTipo(){
-  const tipo = document.getElementById("tipo").value;
-  document.getElementById("motoristaCampos").style.display =
-    tipo === "motorista" ? "block" : "none";
-}
+const tipoSel = document.getElementById("tipo");
+const motoristaCampos = document.getElementById("motoristaCampos");
 
-function salvarCadastro(){
-  const tipo = document.getElementById("tipo").value;
-  const nome = document.getElementById("nome").value.trim();
-  const telefone = document.getElementById("telefone").value.trim();
-  const placa = document.getElementById("placa")?.value.trim();
-  const modelo = document.getElementById("modelo")?.value.trim();
+tipoSel.onchange = () => {
+  motoristaCampos.style.display =
+    tipoSel.value === "motorista" ? "block" : "none";
+};
 
-  if(!tipo || !nome || !telefone){
-    alert("Preencha os dados obrigatórios.");
-    return;
-  }
-
-  if(tipo === "motorista" && (!placa || !modelo)){
-    alert("Preencha os dados do veículo.");
-    return;
-  }
-
-  const usuario = {
+async function cadastrar() {
+  const tipo = tipoSel.value;
+  const dados = {
     tipo,
-    nome,
-    telefone,
-    placa: tipo === "motorista" ? placa : null,
-    modelo: tipo === "motorista" ? modelo : null
+    nome: nome.value,
+    telefone: telefone.value,
+    placa: tipo === "motorista" ? placa.value : null,
+    modelo_carro: tipo === "motorista" ? modelo.value : null,
+    ativo: true
   };
 
-  localStorage.setItem("rf_usuario", JSON.stringify(usuario));
-
-  if(tipo === "motorista"){
-    App.go("index.html");
-  }else{
-    App.go("index-passageiro.html");
+  const ok = await salvarUsuario(dados);
+  if (ok) {
+    alert("Cadastro realizado!");
+    location.href = "login.html";
   }
 }
 </script>
