--- a/index-passageiro.html
+++ b/index-passageiro.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Passageiro – RF Driver</title>
+<title>RF Driver – Passageiro</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="./theme/theme.css">
@@ -11,79 +11,113 @@
 
 <style>
 body{
-  min-height:100vh;
   background:linear-gradient(180deg,#ffffff,#f2f2f2);
+}
+
+.page{
+  min-height:100vh;
   display:flex;
   justify-content:center;
-  align-items:center;
+  padding:18px;
 }
 
-.box{
+.container{
   width:100%;
   max-width:420px;
-  padding:24px;
   display:flex;
   flex-direction:column;
-  gap:18px;
+  gap:16px;
 }
 
-.card{
-  background:#fff;
+/* HEADER */
+.header{
+  padding:22px;
   border-radius:22px;
-  padding:26px;
-  box-shadow:0 10px 28px rgba(0,0,0,.08);
+  background:#fff;
   text-align:center;
+  box-shadow:0 8px 22px rgba(0,0,0,.08);
 }
 
-h1{
+.header h1{
   font-size:1.6rem;
   font-weight:800;
-  color:#D4AF37;
+  color:#d4af37;
 }
 
-p{
-  font-size:.9rem;
+.header span{
+  font-size:.85rem;
   color:#666;
-  margin-top:6px;
 }
 
+/* CARD */
+.card{
+  background:#fff;
+  border-radius:18px;
+  padding:16px;
+  box-shadow:0 6px 18px rgba(0,0,0,.08);
+}
+
+/* BOTÃO */
 .btn{
   padding:18px;
   border-radius:18px;
   border:none;
+  background:linear-gradient(180deg,#e6c97a,#d4af37);
+  font-size:1.05rem;
   font-weight:800;
-  background:linear-gradient(180deg,#E6C97A,#D4AF37);
+  color:#000;
 }
 </style>
 </head>
 
 <body>
 
-<div class="box">
+<div class="page">
+<div class="container">
 
-  <div class="card">
-    <h1>Passageiro RF Driver</h1>
-    <p>Consulte o valor estimado da sua viagem</p>
+  <!-- HEADER -->
+  <div class="header">
+    <h1>PASSAGEIRO</h1>
+    <span>Consulta de valor da viagem</span>
   </div>
 
-  <button class="btn" onclick="iniciar()">
-    ▶ Calcular corrida
+  <!-- BOAS VINDAS -->
+  <div class="card">
+    <strong id="nomePassageiro"></strong><br>
+    <small>Consulte o valor estimado da sua viagem</small>
+  </div>
+
+  <!-- AÇÃO -->
+  <button class="btn" onclick="iniciarCalculo()">
+    🚕 Calcular valor da corrida
   </button>
 
-  <button class="btn btn-outline" onclick="App.go('regras-passageiro.html')">
-    📋 Regras para passageiros
-  </button>
+  <!-- REGRAS PASSAGEIRO -->
+  <div class="card">
+    <strong>📌 Regras para passageiros</strong>
+    <ul style="margin-top:8px;font-size:.85rem;color:#555">
+      <li>Valores podem variar conforme horário</li>
+      <li>Tarifa dinâmica pode ser aplicada</li>
+      <li>O valor exibido é apenas uma estimativa</li>
+    </ul>
+  </div>
 
+</div>
 </div>
 
 <script src="core/global.js"></script>
+
 <script>
 const usuario = App.get("usuario");
-if(!usuario || usuario.tipo !== "passageiro"){
-  App.go("login.html");
+
+if (!usuario || usuario.tipo !== "passageiro") {
+  location.href = "login.html";
 }
 
-function iniciar(){
+document.getElementById("nomePassageiro").innerText =
+  "Olá, " + usuario.nome;
+
+function iniciarCalculo(){
   App.reset();
   App.go("origem.html");
 }
