--- a/resumo.html
+++ b/resumo.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Resumo da Corrida – RF Driver</title>
+<title>Resumo – Passageiro | RF Driver</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="./theme/theme.css">
@@ -11,8 +11,7 @@
 
 <style>
 body{
-  background:linear-gradient(180deg,#ffffff,#f2f2f2);
-  color:#111;
+  background:linear-gradient(180deg,#ffffff,#f3f3f3);
 }
 
 .page{
@@ -30,79 +29,85 @@ body{
   gap:16px;
 }
 
+/* HEADER */
 .header{
-  text-align:center;
   padding:20px;
   border-radius:22px;
   background:#fff;
-  box-shadow:0 8px 24px rgba(0,0,0,.08);
+  text-align:center;
+  box-shadow:0 8px 22px rgba(0,0,0,.08);
 }
 
 .header h1{
-  font-size:1.15rem;
+  font-size:1.4rem;
   font-weight:800;
-  color:#D4AF37;
+  color:#d4af37;
 }
 
-.route,
-.block,
-.totalBox{
+.header span{
+  font-size:.8rem;
+  color:#666;
+}
+
+/* CARD */
+.card{
   background:#fff;
   border-radius:18px;
   padding:16px;
   box-shadow:0 6px 18px rgba(0,0,0,.08);
 }
 
-.route{text-align:center}
-
-select,input{
-  width:100%;
-  padding:12px;
-  border-radius:14px;
-  border:1px solid #ccc;
+.route{
+  text-align:center;
+  font-weight:700;
 }
 
-.extra{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:12px;
-  border-radius:14px;
-  border:1px solid #eee;
-  margin-bottom:8px;
+.route .arrow{
+  margin:6px 0;
+  color:#d4af37;
+  font-size:1.3rem;
 }
 
-.extra.active{
-  border-color:#D4AF37;
-  background:rgba(212,175,55,.08);
+/* DETALHAMENTO */
+.details{
+  font-size:.85rem;
 }
 
 .details div{
   display:flex;
   justify-content:space-between;
-  font-size:.85rem;
   margin-bottom:6px;
 }
 
+/* TOTAL */
 .totalBox{
+  background:linear-gradient(135deg,#d4af37,#e6c97a);
+  border-radius:22px;
+  padding:22px;
   text-align:center;
+  color:#000;
+  box-shadow:0 10px 28px rgba(0,0,0,.18);
+}
+
+.totalLabel{
+  font-size:.75rem;
+  opacity:.8;
 }
 
 .total{
-  font-size:2.2rem;
-  font-weight:800;
-  color:#D4AF37;
+  font-size:2.4rem;
+  font-weight:900;
 }
 
+/* BOTÃO */
 .btn{
-  padding:16px;
+  padding:18px;
   border-radius:18px;
   border:none;
-  font-weight:800;
-}
-
-.btn-primary{
-  background:linear-gradient(180deg,#E6C97A,#D4AF37);
+  background:#000;
+  color:#fff;
+  font-size:1rem;
+  font-weight:700;
 }
 </style>
 </head>
@@ -112,60 +117,38 @@ select,input{
 <div class="page">
 <div class="container">
 
+  <!-- HEADER -->
   <div class="header">
-    <h1>RF Driver – Resumo da Viagem</h1>
+    <h1>Resumo da Viagem</h1>
+    <span>Valor estimado</span>
   </div>
 
-  <div class="route">
-    <strong>📌 Origem</strong><br><span id="origemTxt"></span>
-    <div style="margin:6px">⬇</div>
-    <strong>🏁 Destino</strong><br><span id="destinoTxt"></span>
+  <!-- ROTA -->
+  <div class="card route">
+    📌 <strong>Origem</strong><br>
+    <span id="origemTxt"></span>
+
+    <div class="arrow">⬇</div>
+
+    🏁 <strong>Destino</strong><br>
+    <span id="destinoTxt"></span>
   </div>
 
-  <div class="block">
-    <label><strong>🚖 Tipo de viagem</strong></label>
-    <select id="tipoViagem">
-      <option value="ida">🚕 Ida</option>
-      <option value="bate_volta">♻️ Bate e volta (+80%)</option>
-      <option value="ida_volta">🚕♻️ Ida e volta</option>
-      <option value="ida_volta_espera">🚕♻️ Ida e volta com espera (+10%)</option>
-    </select>
-  </div>
-
-  <div class="block">
-    <div class="extra"><span>🛣️ Desvio simples</span><input type="checkbox" id="desvioSimples"></div>
-    <div class="extra"><span>🏖️ Volta da praia</span><input type="checkbox" id="voltaPraia"></div>
-    <div class="extra"><span>🧺 Taxa de feira</span><input type="checkbox" id="taxaFeira"></div>
-  </div>
-
-  <div class="block">
-    <label><strong>🐶 Transporte de animal</strong></label>
-    <select id="animal">
-      <option value="0">Não</option>
-      <option value="5">Pequeno</option>
-      <option value="7">Médio</option>
-      <option value="10">Grande</option>
-      <option value="20">Viagem longa</option>
-    </select>
-  </div>
-
-  <div class="block">
-    <label><strong>⏱️ Tempo de espera (min)</strong></label>
-    <input type="number" id="minutosEspera">
-  </div>
-
-  <div class="block">
+  <!-- DETALHAMENTO -->
+  <div class="card">
     <strong>Detalhamento</strong>
     <div class="details" id="detalhamento"></div>
   </div>
 
+  <!-- TOTAL -->
   <div class="totalBox">
-    <strong>Total</strong>
+    <div class="totalLabel">Valor estimado</div>
     <div class="total" id="total">R$ 0,00</div>
   </div>
 
-  <button class="btn btn-primary" id="btnWhats" onclick="enviarWhats()">
-    📲 Enviar recibo no WhatsApp
+  <!-- VOLTAR -->
+  <button class="btn" onclick="voltar()">
+    ⬅ Voltar
   </button>
 
 </div>
@@ -176,130 +159,68 @@ select,input{
 <script src="core/dinamico.js"></script>
 
 <script>
-const usuario = App.get("usuario") || {};
-const tipoUsuario = usuario.tipo || "passageiro";
+const usuario = App.get("usuario");
+if (!usuario || usuario.tipo !== "passageiro") {
+  location.href = "login.html";
+}
 
 const origem = App.get("origem");
 const destino = App.get("destino");
 const valorBase = Number(App.get("valorBase") || 0);
 
-origemTxt.innerText = origem;
-destinoTxt.innerText = destino;
+document.getElementById("origemTxt").innerText = origem;
+document.getElementById("destinoTxt").innerText = destino;
 
-if(tipoUsuario !== "motorista"){
-  btnWhats.style.display = "none";
-}
+const detalheDiv = document.getElementById("detalhamento");
+const totalDiv = document.getElementById("total");
 
 function calcular(){
   let total = valorBase;
   let detalhes = [];
-  window.detalhesWhats = [];
 
   detalhes.push(["🚖 Viagem base", valorBase]);
-  detalhesWhats.push(`🚖 *Viagem base*: R$ ${valorBase.toFixed(2)}`);
 
-  if(Dinamico?.ativo){
+  if (Dinamico?.ativo) {
     const acres = valorBase * (Dinamico.multiplicador - 1);
     total += acres;
     detalhes.push(["⚡ Tarifa dinâmica", acres]);
-    detalhesWhats.push(`⚡ *Tarifa dinâmica*: +R$ ${acres.toFixed(2)}`);
   }
 
-  const tipo = tipoViagem.value;
+  const tipo = App.get("tipoViagem");
 
-  if(tipo === "bate_volta"){
-    const acres = valorBase * 0.8;
+  if (tipo === "bate_volta") {
+    const acres = valorBase * 0.80;
     total += acres;
-    detalhes.push(["♻️ Bate e volta", acres]);
-    detalhesWhats.push(`♻️ *Bate e volta*: +R$ ${acres.toFixed(2)}`);
+    detalhes.push(["♻️ Bate e volta (+80%)", acres]);
   }
 
-  if(tipo === "ida_volta"){
-    const acres = valorBase;
-    total += acres;
-    detalhes.push(["🚕 Ida e volta", acres]);
-    detalhesWhats.push(`🚕 *Ida e volta*: +R$ ${acres.toFixed(2)}`);
+  if (tipo === "ida_volta") {
+    total += valorBase;
+    detalhes.push(["🚕 Ida e volta", valorBase]);
   }
 
-  if(tipo === "ida_volta_espera"){
+  if (tipo === "ida_volta_espera") {
     const idaVolta = valorBase * 2;
     const acres = idaVolta * 0.10;
     total += (idaVolta - valorBase) + acres;
     detalhes.push(["🚕 Ida e volta", idaVolta - valorBase]);
-    detalhes.push(["⏳ Acréscimo de espera", acres]);
-    detalhesWhats.push(`🚕 *Ida e volta*: +R$ ${(idaVolta - valorBase).toFixed(2)}`);
-    detalhesWhats.push(`⏳ *Espera (10%)*: +R$ ${acres.toFixed(2)}`);
+    detalhes.push(["⏳ Acréscimo de espera (10%)", acres]);
   }
 
-  if(desvioSimples.checked){
-    total += Taxas.desvioRotaSimples;
-    detalhes.push(["🛣️ Desvio simples", Taxas.desvioRotaSimples]);
-    detalhesWhats.push("🛣️ *Desvio simples*: +R$ 5,00");
-  }
-
-  if(voltaPraia.checked){
-    total += Taxas.voltaPraia;
-    detalhes.push(["🏖️ Volta da praia", Taxas.voltaPraia]);
-    detalhesWhats.push("🏖️ *Volta da praia*: +R$ 10,00");
-  }
-
-  if(taxaFeira.checked){
-    total += Taxas.feira;
-    detalhes.push(["🧺 Taxa de feira", Taxas.feira]);
-    detalhesWhats.push("🧺 *Taxa de feira*: +R$ 5,00");
-  }
-
-  const animal = Number(animal.value || 0);
-  if(animal){
-    total += animal;
-    detalhes.push(["🐶 Transporte animal", animal]);
-    detalhesWhats.push(`🐶 *Transporte animal*: +R$ ${animal.toFixed(2)}`);
-  }
-
-  const min = Number(minutosEspera.value || 0);
-  if(min >= Taxas.espera.blocoMinutos){
-    const acres = Math.floor(min / Taxas.espera.blocoMinutos) * Taxas.espera.valorPorBloco;
-    total += acres;
-    detalhes.push([`⏱️ Espera (${min} min)`, acres]);
-    detalhesWhats.push(`⏱️ *Tempo de espera*: +R$ ${acres.toFixed(2)}`);
-  }
-
-  detalhamento.innerHTML = detalhes.map(d =>
-    `<div><span><strong>${d[0]}</strong></span><strong>R$ ${d[1].toFixed(2)}</strong></div>`
-  ).join("");
+  detalheDiv.innerHTML = detalhes.map(d => `
+    <div>
+      <span><strong>${d[0]}</strong></span>
+      <strong>R$ ${d[1].toFixed(2)}</strong>
+    </div>
+  `).join("");
 
   totalDiv.innerText = `R$ ${total.toFixed(2)}`;
-  App.set("total", total);
 }
-
-document.querySelectorAll("select,input").forEach(el=>{
-  el.addEventListener("change", calcular);
-});
 
 calcular();
 
-function enviarWhats(){
-  const assinatura = `
-—
-👤 *Motorista*: ${usuario.nome}
-🚗 *Veículo*: ${usuario.modelo}
-🔖 *Placa*: ${usuario.placa}
-`;
-
-  const msg = `
-🚖 *RF Driver – Recibo de viagem*
-
-📌 *Origem*: ${origem}
-🏁 *Destino*: ${destino}
-
-*Detalhamento*
-${detalhesWhats.join("\n")}
-
-💰 *Total*: R$ ${App.get("total").toFixed(2)}
-${assinatura}
-`;
-
-  window.open("https://wa.me/?text="+encodeURIComponent(msg),"_blank");
+function voltar(){
+  App.go("destino.html");
 }
 </script>
 
